--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,54 @@
-/* You can add global styles to this file, and also import other style files */
+app-root {
+    height: 100%;
+    color: #FFEBCD;
+    background-color: #FFEBCD;
+  }
+
+app-top-toolbar {
+    height: 35%;
+    background-color: #800000;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+app-content-page {
+    height: 55%;
+    background-color: #FFEBCD;
+}
+
+.pull-right {
+    float: right;
+    align-items: center;
+    width: 20%;
+}
+
+top-nav {
+    width: 100%;
+    height: 10%;
+    background-color: #800000;
+    color: #FFEBCD;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+app-left-nav {
+    width: 20%;
+    height: 100%;
+    float: left;
+    display: flex;
+    background-color: #FFEBCD;
+    color: #800000;
+  }
+
+  .content {
+    width: 80%;
+    height: 100%;
+    float: right;
+    display: flex;
+    background-color: #FFEBCD;
+    color: #800000;
+  }
